Bug 67908 - CRASH in slideshow mode with fade smoothly transition
Summary: CRASH in slideshow mode with fade smoothly transition
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium critical
Assignee: Thorsten Behrens (allotropia)
URL:
Whiteboard: target:4.2.0 target:4.1.2
Keywords:
: 67203 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-08-08 15:49 UTC by Jean-Baptiste Faure
Modified: 2017-02-16 19:45 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2013-08-08 15:49:20 UTC
The following file https://projects.kde.org/attachments/2/20110319-KDE4.6_release_party-skrooge.odp crahses LibreOffice 4.1.x and the master when starting the slideshow (F5).
Tested on Ubuntu 12.04 x86-64 with LO 4.1.0.4 (stable release from TDF), 4.1.2.0.0+ (Build ID: 88fec7695f5f3c9574bc305e31120758004493c) and the master (Build ID: d65c44020bf32713af4985f598f7b532a969247a).
It seems that the problem comes from the fade smoothly transition. If I remove this transition there is no crash in slide show mode. If I try to add the same transition I get a crash or a freeze.

Best regards. JBF
Comment 1 Jean-Baptiste Faure 2013-08-09 04:21:24 UTC
Changed version to the oldest in which I found the crash
Comment 2 David Tardon 2013-08-09 11:26:32 UTC
*** Bug 67203 has been marked as a duplicate of this bug. ***
Comment 3 David Tardon 2013-08-12 11:30:13 UTC
The crash is caused by commit a775188f6bbf3bbf8448b2b7398a1902908bb5e2. And there are some warnings from valgrind even after reverting that.
Comment 4 Commit Notification 2013-08-13 09:16:12 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7a66bd77131ebae661887c561168f513ca5a5052

Fix fdo#67908 - keep Visual around until after GL context is created.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2013-08-13 14:58:56 UTC
Thorsten Behrens committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=63162c960ae6f0d70740a6bba2cf225d2d8d3688&h=libreoffice-4-1

Fix fdo#67908 - keep Visual around until after GL context is created.


It will be available in LibreOffice 4.1.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jean-Baptiste Faure 2013-08-13 17:25:58 UTC
Verified on Version: 4.1.2.0.0+ (Build ID: 63162c960ae6f0d70740a6bba2cf225d2d8d368).
Tests done:
- test file in slideshow mode: OK
- adding a fade smoothing transition on a slideshow without transition: OK
So works as expected. Thank you very much for the fix.

Best regards. JBF