Fix fdo#67908 - keep Visual around until after GL context is created.

Change-Id: Ie84decdccfa5bbf44c9cb05e2c2229f7384c1912